--- a/rush.yaml
+++ b/rush.yaml
@@ -28386,7 +28386,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the total number of face-up Dragon Type monsters on your opponent's field and the number of Dragon Type monsters in your opponent's Graveyard] x 500.
+    This card gains ATK equal to [the total number of face-up Dragon Type monsters on your opponent's field and in their Graveyard] x 500.
   de:
   es:
   fr:
@@ -28434,9 +28434,6 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714193
 ---
 konami_id: 16308
@@ -28455,7 +28452,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A very beautiful dragon covered with FIRE. It does not like fights, but has incredibly high attack power.
+    An exquisite dragon covered in fire. It does not like fights, but still has incredibly high attack power.
   de:
   es:
   fr:
@@ -28499,9 +28496,6 @@ sets:
     set_name: Strongest Battle Deck Yuamu - Come Forth! High Tech Dragon!
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717069
 ---
 konami_id: 16309
@@ -28520,7 +28514,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Carrying infinite potential, she continues to chase her shining dream with a smile on her face.
+    In possession of infinite potential. Chasing her dreams with a smile that blinds.
   de:
   es:
   fr:
@@ -28578,9 +28572,6 @@ sets:
     rarities:
     - Rare
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714205
 ---
 konami_id: 16310
@@ -28599,7 +28590,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A bizarre demonic devil who serves the King. It absorbs every sound and repels every attack.
+    A deformed fiend under servitude to the king. It swallows all sound and deflects all bombardment.
   de:
   es:
   fr:
@@ -28641,9 +28632,6 @@ sets:
     set_name: Strongest Battle Deck Roa - Demon's Rock
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716524
 ---
 konami_id: 16311
@@ -28662,7 +28650,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A fierce mermaid that torments the damned who fell to hell. She has a great reputation of making recidivists beg "I will never do anything bad again, please forgive me".
+    An aggressive mermaid who disciplines those sent to the abyss. Frequent repeaters have sent positive reviews for forgiveness.
   de:
   es:
   fr:
@@ -28694,9 +28682,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715211
 ---
 konami_id: 16312
@@ -28715,7 +28700,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A lady warrior whose main battlefield is a prison island. Armed with sword and shield, she rebukes harshly. She has a great reputation of bringing recidivists back to their senses.
+    A female warrior who occupies a prison island as her primary battling grounds. She scolds with sword and shield in hand. Frequent repeaters have sent positive reviews of their awakening.
   de:
   es:
   fr:
@@ -28755,9 +28740,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715497
 ---
 konami_id: 16313
@@ -28776,7 +28758,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A group of grass ninjas who protect their lord from crises, while concealed in the shadow. Even if they are struck down, they strike back from the shadows of blades of grass.
+    Lurking in the shadows to save its master of the grass clan from danger. Even after its defeat, it will return from behind the grassy knoll.
   de:
   es:
   fr:
@@ -28810,9 +28792,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715548
 ---
 konami_id: 16314
@@ -28831,7 +28810,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A group of grass ninjas who secretly support the path to victory while concealing themselves in the shadows. They continue to loyally serve their lord.
+    Lurking in the shadows to support its master of the grass clan in battle. There is no doubt about her dedication.
   de:
   es:
   fr:
@@ -28865,9 +28844,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715629
 ---
 konami_id: 16315
@@ -28886,7 +28862,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A bird that drops bombs. There may be a tiny person inside.
+    A bird that releases bombs. There may be little people inside.
   de:
   es:
   fr:
@@ -28926,9 +28902,6 @@ sets:
     set_name: Strongest Battle Deck Asana - Pride of the Heavy Cavalry Style
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 709554
 ---
 konami_id: 16316
@@ -28997,7 +28970,7 @@ name:
   zh-CN:
 text:
   en: |-
-    An electric lifeform that appears with lightning strikes. It can transform itself into an electric current that invades circuitry, causing machinery to fail.
+    Materializes alongside a flash of lightening. This electric creature can zap through machinery to short-circuit their being.
   de:
   es:
   fr:
@@ -29037,11 +29010,6 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716942
 ---
 konami_id: 16318
@@ -29060,7 +29028,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A surprisingly hot plant-warrior that attacks with seeds and sword.
+    A plant-warrior that attacks with seeds and sword. Surprisingly baked.
   de:
   es:
   fr:
@@ -29092,11 +29060,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713427
 ---
 konami_id: 16319
@@ -29115,7 +29078,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A gigantic ant-like creature covered by thick armor. Everything in its path that tries to harm the forest will be blocked.
+    A gigantic ant creature covered by thick armor. It will crush those that had forsaken the forest.
   de:
   es:
   fr:
@@ -29147,11 +29110,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 711421
 ---
 konami_id: 16320
@@ -29504,9 +29462,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715007
 ---
 konami_id: 16325
@@ -29581,9 +29536,6 @@ sets:
     set_name: Strongest Battle Deck Romin - Psychic Beat
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714796
 ---
 konami_id: 16326
@@ -29668,9 +29620,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714203
 ---
 konami_id: 16327
@@ -29745,9 +29694,6 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716995
 ---
 konami_id: 16328
@@ -29780,7 +29726,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon up to 2 Warrior and/or Winged Beast Type Normal Monsters from your Graveyard to your field in face-down Defense Position.
+    Special Summon up to 2 Warrior Type and/or Winged Beast Type Normal Monsters from your Graveyard to your field in face-down Defense Position.
   de:
   es:
   fr:
@@ -29820,9 +29766,6 @@ sets:
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717511
 ---
 konami_id: 16329
@@ -30149,7 +30092,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. Then, if you changed a monster to face-up Attack Position by this effect, gain LP equal to [that monster's original ATK].
+    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. If you changed a monster to face-up Attack Position by this effect, gain LP equal to [that monster's original ATK].
   de:
   es:
   fr:
@@ -30183,9 +30126,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 712444
 ---
 konami_id: 16334
@@ -30252,9 +30192,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715087
 ---
 konami_id: 16335
@@ -30287,7 +30224,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 Plant Type monster from your hand to the Graveyard. Then, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase. This turn, this card cannot attack directly.
+    Send 1 Plant Type monster from your hand to the Graveyard. If you do, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase. This card cannot attack directly this turn.
   de:
   es:
   fr:
@@ -30325,9 +30262,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714820
 ---
 konami_id: 16336
@@ -30394,9 +30328,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715055
 ---
 konami_id: 16337
@@ -30557,7 +30488,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 2 Spell/Trap Cards in your hand.
+    Reveal 2 Spell/Trap Cards in your hand to your opponent.
   de:
   es:
   fr:
@@ -30603,9 +30534,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713928
 ---
 konami_id: 16340
@@ -30757,11 +30685,6 @@ sets:
     set_name: Go Rush Deck Bonus Cards
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716699
 ---
 konami_id: 16342
@@ -30794,7 +30717,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Psychic Type monster from your Graveyard to your field in face-up Attack Position.
+    Special Summon 1 Level 7 Psychic Type monster from your Graveyard in face-up Attack Position to your field.
   de:
   es:
   fr:
@@ -30826,11 +30749,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715732
 ---
 konami_id: 16343
@@ -31067,7 +30985,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 2 Psychic Type monsters from your Graveyard on the bottom of the Deck in any order.
+    Place 2 Psychic Type monsters from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -31081,7 +30999,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Psychic Type Normal Monster from your Graveyard to your hand. Then, if you added "CAN:D" to your hand by this effect, gain 1000 LP.
+    Add 1 Psychic Type Normal Monster from your Graveyard to your hand. If you added "CAN:D" to your hand by this effect, gain 1000 LP.
   de:
   es:
   fr:
@@ -31116,9 +31034,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715451
 ---
 konami_id: 16347
@@ -31551,7 +31466,7 @@ yugipedia_page_id: 715575
 ---
 konami_id: 16353
 name:
-  en: Moisturize
+  en: Hydration
   de:
   es:
   fr:
@@ -31597,7 +31512,7 @@ series:
 - Bubble Era
 images:
 - index: 1
-  image: Moisturize-RDMRP1-JP-C.png
+  image: Hydration-RDMRP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP047
@@ -31617,11 +31532,6 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715934
 ---
 konami_id: 16354
@@ -31684,9 +31594,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716661
 ---
 konami_id: 16355
@@ -31810,11 +31717,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715438
 ---
 konami_id: 16357
@@ -31892,7 +31794,7 @@ yugipedia_page_id: 715484
 ---
 konami_id: 16358
 name:
-  en: Avian Spell Strategy
+  en: Avian Spell Tactics
   de:
   es:
   fr:
@@ -31906,7 +31808,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Warrior and/or Winged Beast Type monsters on your field.
+    You have 2 or more face-up Warrior Type and/or Winged Beast Type monsters on your field.
   de:
   es:
   fr:
@@ -31920,7 +31822,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can place 1 Level 8 or lower Warrior or Winged Beast Type monster from your Graveyard on top of the Deck.
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can place 1 Level 8 or lower Warrior Type or Winged Beast Type monster from your Graveyard on top of your Deck.
   de:
   es:
   fr:
@@ -31936,7 +31838,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: AvianSpellStrategy-RDTB01-JP-C.png
+  image: AvianSpellTactics-RDTB01-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP053
@@ -31956,11 +31858,6 @@ sets:
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713346
 ---
 konami_id: 16359
@@ -116816,7 +116713,7 @@ name:
   it:
   pt:
   ja: ロード・オブ・ドラゴン－ドラゴンの<ruby>絶<rt>ぜっ</rt></ruby><ruby>対<rt>たい</rt></ruby><ruby>者<rt>しゃ</rt></ruby>－
-  ja_romaji: Rōdo obu Doragon - Doragon no Zettaisha -
+  ja_romaji: Rōdo Obu Doragon - Doragon no Zettaisha -
   ko:
   ko_rr:
   zh-TW:
@@ -118848,7 +118745,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７／光属性／鳥獣族）がいる場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118860,10 +118758,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の「ライトニング・ボルコンドル」がいる場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     This card can attack twice this turn.
@@ -118872,7 +118774,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、このカードは２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118921,7 +118824,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118933,7 +118837,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７／光属性／鳥獣族）１体を選び、自分フィールドに表側表示で特殊召喚する。その後、相手フィールドの表側表示モンスターを３体まで選んでその属性をターン終了時まで光属性にできる。
   ko:
   zh-TW:
   zh-CN:
@@ -118981,7 +118886,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７／光属性／鳥獣族）がいる場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -118993,10 +118899,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上で、自分フィールドに表側表示の「ライトニング・ボルコンドル」がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Draw 1 card.
@@ -119005,7 +118915,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
@@ -119053,7 +118964,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（光属性／鳥獣族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119065,7 +118977,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。この効果の条件でモンスター（レベル７）を墓地へ送った場合、さらに自分のデッキの上からカード３枚を墓地へ送る事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -119113,7 +119026,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（光属性）１体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119125,7 +119039,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、モンスター（光属性／鳥獣族）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。さらに、自分の墓地の「ライトニング・ボルコンドル」１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
@@ -119229,7 +119144,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119241,7 +119157,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「右手に盾を左手に剣を」「左手に剣を右手に盾を」を合計２枚まで選んで自分の魔法＆罠ゾーンにセットする。この効果で「右手に盾を左手に剣を」を選んだ場合、さらに相手フィールドのモンスターを３体まで選んで表示形式を変更できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119289,7 +119206,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119301,7 +119219,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「右手の盾」または通常モンスター（戦士族／攻撃力５００以下）１体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -119349,7 +119268,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119361,7 +119281,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル２／サイキック族／攻撃力５００／守備力０）１体を選び、自分フィールドに表側表示で特殊召喚する。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
@@ -119409,7 +119330,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119421,7 +119343,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「Ｖｉ－ＦＲＮＤ」がいる場合、さらに相手フィールドの裏側表示のカードを２枚まで選んで確認できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119469,7 +119392,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119481,7 +119405,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「彩光のプリマギターナ」がいる場合、さらに自分フィールドの表側表示モンスターを２体まで選んでその攻撃力を次の相手ターン終了時まで１０００アップできる。
   ko:
   zh-TW:
   zh-CN:
