--- a/data/rush/yugipedia1018698.yaml
+++ b/data/rush/yugipedia1018698.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの元々の攻撃力が１６００以上の表側表示モンスター（地属性・闇属性／獣戦士族）の攻撃力・守備力は４００アップし、効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
