--- a/data/rush/yugipedia1018708.yaml
+++ b/data/rush/yugipedia1018708.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（獣戦士族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの裏側表示のカード１枚を選んで破壊する。このターン、自分はモンスター（獣戦士族以外）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
