--- a/data/rush/yugipedia1018710.yaml
+++ b/data/rush/yugipedia1018710.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（獣戦士族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで、［この効果の条件で墓地へ送ったモンスターの元々の攻撃力］だけアップする。自分のフィールドゾーンにカードがある場合、さらに相手フィールドのモンスター１体を選んで表示形式を変更できる。
   ko:
   zh-TW:
   zh-CN:
