--- a/rush.yaml
+++ b/rush.yaml
@@ -40173,7 +40173,7 @@ name:
   it:
   pt:
   ja: サイコカウンター
-  ja_romaji: Saikokauntā
+  ja_romaji: Saiko Kauntā
   ko: 사이코카운터
   ko_rr:
   zh-TW:
@@ -119088,7 +119088,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７／光属性／鳥獣族）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119100,7 +119101,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。相手フィールドに表側表示モンスター（光属性）がいる場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119454,7 +119456,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ５００ＬＰを払って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119466,12 +119469,15 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（闇属性／サイキック族／守備力０）１体を選んで手札に加える。この効果で「Ｖｉ－ＦＲＮＤ」を選んだ場合、さらに自分のデッキの上からカード３枚を墓地へ送る事ができる。
   ko:
   zh-TW:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Band Group
 images:
 - index: 1
   image: Psychicomposition-RDMRP2-JP-OP.png
@@ -119510,7 +119516,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -119522,7 +119529,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの元々の攻撃力が１６００以上の表側表示モンスター（地属性・闇属性／獣戦士族）の攻撃力・守備力は４００アップし、効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -119566,7 +119574,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（獣戦士族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119578,7 +119587,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの裏側表示のカード１枚を選んで破壊する。このターン、自分はモンスター（獣戦士族以外）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
@@ -119628,7 +119638,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード以外の自分フィールドの表側表示モンスター（獣戦士族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119640,7 +119651,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで、［この効果の条件で墓地へ送ったモンスターの元々の攻撃力］だけアップする。自分のフィールドゾーンにカードがある場合、さらに相手フィールドのモンスター１体を選んで表示形式を変更できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119667,6 +119679,48 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1018710
+---
+konami_id:
+name:
+  en: Seiyaryu
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A mystical dragon that burns away the unworthy with its mystic flames.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    聖なる炎で悪しき者を焼きはらう、神聖な力を持つドラゴン。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 2300
+sets:
+  ja:
+  - set_number: RD/????-JP00?
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 1018842
 ---
 konami_id:
 name:
