--- a/data/rush/15168.yaml
+++ b/data/rush/15168.yaml
@@ -38,7 +38,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: Dragorite-RDSD03-JP-C.png
+  image: Dragorite-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/ST02-JP005
