--- a/data/rush/15184.yaml
+++ b/data/rush/15184.yaml
@@ -25,7 +25,7 @@ text:
     Questo drago leggendario è una potente macchina distruttrice. Praticamente invincibile, sono in pochi ad aver fronteggiato questa creatura ed essere sopravvissuti per raccontarlo.
   pt:
   ja: |-
-    <ruby>高<rt>たか</rt></ruby>い<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>を<ruby>誇<rt>ほこ</rt></ruby>る<ruby>伝<rt>でん</rt></ruby><ruby>説<rt>せつ</rt></ruby>のドラゴン。どんな<ruby>相<rt>あい</rt></ruby><ruby>手<rt>て</rt></ruby>でも<ruby>粉<rt>ふん</rt></ruby><ruby>砕<rt>さい</rt></ruby>する、その<ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>力<rt>りょく</rt></ruby>は<ruby>計<rt>はか</rt></ruby>り<ruby>知<rt>し</rt></ruby>れない。
+    高い攻撃力を誇る伝説のドラゴン。どんな相手でも粉砕する、その破壊力は計り知れない。
   ko: |-
     높은 공격력을 자랑하는 전설의 드래곤. 어떠한 상대라도 분쇄해 버리는 파괴력은 상상을 초월한다.
   zh-TW:
@@ -47,7 +47,7 @@ images:
   image: BlueEyesWhiteDragon-RDDD01-JP-ScR.png
   illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-2.png
 - index: 3
-  image: BlueEyesWhiteDragon-RDORP1-JP-ORR.png
+  image: BlueEyesWhiteDragon-RDSD0A-JP-UR.png
   illustration: BlueEyesWhiteDragon-G002-JP-VG-artwork-3.png
 sets:
   ja:
