--- a/data/rush/15913.yaml
+++ b/data/rush/15913.yaml
@@ -55,7 +55,7 @@ series:
 legend: true
 images:
 - index: 1
-  image: TrapHole-RDGRD0-JP-NPR.png
+  image: TrapHole-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX1-JP019
