--- a/data/rush/17224.yaml
+++ b/data/rush/17224.yaml
@@ -48,7 +48,7 @@ atk: 200
 def: 700
 images:
 - index: 1
-  image: Kaibaman-RDGRP1-JP-C.png
+  image: Kaibaman-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/GRP1-JP040
