--- a/data/rush/18651.yaml
+++ b/data/rush/18651.yaml
@@ -33,7 +33,7 @@ atk: 1100
 def: 1200
 images:
 - index: 1
-  image: FairyDragon-RDB224-JP-C.png
+  image: FairyDragon-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/B224-JP008
