--- a/data/rush/19424.yaml
+++ b/data/rush/19424.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19424
 name:
   en: Blue-Eyes Bright Dragon
   de:
@@ -61,7 +61,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: BlueEyesBrightDragon-RDSD0A-JP-OP.png
+  image: BlueEyesBrightDragon-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP003
