--- a/data/rush/19425.yaml
+++ b/data/rush/19425.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19425
 name:
   en: Blue-Eyes Vision Dragon
   de:
@@ -64,7 +64,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: BlueEyesVisionDragon-RDSD0A-JP-OP.png
+  image: BlueEyesVisionDragon-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JPS03
