--- a/data/rush/19428.yaml
+++ b/data/rush/19428.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19428
 name:
   en: Soul Drake
   de:
@@ -46,7 +46,7 @@ atk: 1100
 def: 600
 images:
 - index: 1
-  image: SoulDrake-RDSD0A-JP-OP.png
+  image: SoulDrake-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP007
