--- a/data/rush/19430.yaml
+++ b/data/rush/19430.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19430
 name:
   en: Light Effigy
   de:
@@ -48,7 +48,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: LightEffigy-RDSD0A-JP-OP.png
+  image: LightEffigy-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP014
