--- a/data/rush/19432.yaml
+++ b/data/rush/19432.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19432
 name:
   en: Sanctum of Legend
   de:
@@ -42,7 +42,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: SanctumofLegend-RDSD0A-JP-OP.png
+  image: SanctumofLegend-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP028
