--- a/data/rush/19433.yaml
+++ b/data/rush/19433.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19433
 name:
   en: Treasure of Eyes of Blue
   de:
@@ -42,7 +42,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TreasureofEyesofBlue-RDSD0A-JP-OP.png
+  image: TreasureofEyesofBlue-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP035
