--- a/data/rush/15799.yaml
+++ b/data/rush/15799.yaml
@@ -43,7 +43,7 @@ effect:
     Questa carta guadagna 600 ATK fino alla fine di questo turno. Se hai "Drago Ghiaccio Cristallino" e "Drago Fiamma Ardente" nel tuo Cimitero, puoi anche mischiarli entrambi nel Deck. Se lo fai, puoi distruggere 1 mostro scoperto con 1500 DEF o meno sul Terreno del tuo avversario.
   pt:
   ja: |-
-    このカードの攻撃力はターン終了時まで６００アップする。自分の墓地に「クリア・アイス・ドラゴン」と「バーニング・ブレイズ・ドラゴン」がいる場合、その２体をデッキに戻す事ができる。戻した場合、相手フィールドの表側表示モンスター（守備力１５００以下）１体を選んで破壊できる。
+    このカードの攻撃力はターン終了時まで６００アップする。その後、自分の墓地の「クリア・アイス・ドラゴン」「バーニング・ブレイズ・ドラゴン」を１体ずつ選んでデッキに戻す事ができる。戻した場合、さらに相手フィールドの表側表示モンスター（守備力１５００以下）１体を選んで破壊できる。
   ko: |-
     이 카드의 공격력은 턴 종료시까지 600 올린다. 자신 묘지에 "클리어 아이스 드래곤"과 "버닝 브레이즈 드래곤"이 있을 경우, 그 2장을 덱으로 되돌릴 수 있다. 되돌렸을 경우, 상대 필드의 앞면 표시 몬스터(수비력 1500 이하) 1장을 고르고 파괴할 수 있다.
   zh-TW:
@@ -56,7 +56,7 @@ atk: 2400
 def: 1600
 images:
 - index: 1
-  image: AncientAriseDragon-RDSA03-JP-ScR.png
+  image: AncientAriseDragon-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP024
