--- a/data/rush/16304.yaml
+++ b/data/rush/16304.yaml
@@ -48,7 +48,7 @@ atk: 300
 def: 1300
 images:
 - index: 1
-  image: TriadDrago-RDSD03-JP-C.png
+  image: TriadDrago-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/P003-JP002
