--- a/data/rush/16775.yaml
+++ b/data/rush/16775.yaml
@@ -34,7 +34,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: Sylphidra-RDSBD2-JP-C.png
+  image: Sylphidra-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD2-JP012
