--- a/data/rush/18580.yaml
+++ b/data/rush/18580.yaml
@@ -42,7 +42,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SilentDoom-RD23PR-JP-NPR.png
+  image: SilentDoom-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/23PR-JP004
