--- a/data/rush/18695.yaml
+++ b/data/rush/18695.yaml
@@ -34,7 +34,7 @@ atk: 2100
 def: 2800
 images:
 - index: 1
-  image: Hyozanryu-RDLGP1-JP-R.png
+  image: Hyozanryu-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/LGP1-JP017
