--- a/data/rush/19426.yaml
+++ b/data/rush/19426.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19426
 name:
   en: Absolute Lord of D.
   de:
@@ -46,7 +46,7 @@ atk: 1200
 def: 1100
 images:
 - index: 1
-  image: AbsoluteLordofD-RDSD0A-JP-OP.png
+  image: AbsoluteLordofD-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP005
