--- a/data/rush/19427.yaml
+++ b/data/rush/19427.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19427
 name:
   en: Node of Legend
   de:
@@ -46,7 +46,7 @@ atk: 1300
 def: 0
 images:
 - index: 1
-  image: NodeofLegend-RDSD0A-JP-OP.png
+  image: NodeofLegend-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP006
