--- a/data/rush/19429.yaml
+++ b/data/rush/19429.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19429
 name:
   en: Phoenix Dragoon
   de:
@@ -46,7 +46,7 @@ atk: 1000
 def: 1000
 images:
 - index: 1
-  image: PhoenixDragoon-RDSD0A-JP-OP.png
+  image: PhoenixDragoon-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/SD0A-JP008
