--- a/data/rush/19434.yaml
+++ b/data/rush/19434.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19434
 name:
   en: Blue-Eyes Ultimate Dragon
   de:
@@ -35,7 +35,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: BlueEyesUltimateDragon-RDSD0A-JP-OP.png
+  image: BlueEyesUltimateDragon-RDSD0A-JP-UR.png
 sets:
   ja:
   - set_number: RD/SD0A-JP001
