--- a/data/rush/16114.yaml
+++ b/data/rush/16114.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if your opponent has 3 monsters on their field, you can send 1 additional card from the top of your Deck to the Graveyard.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if your opponent has 3 monsters on their field, you can send 1 card from the top of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -61,7 +61,4 @@ sets:
     set_name: Strongest Battle Deck Romin - Psychic Beat
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716314
