--- a/data/rush/16287.yaml
+++ b/data/rush/16287.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Psychic Type monster from your hand face-up to your field. Then, if you sent a Level 2 or lower monster to the Graveyard to meet the requirement, gain 1000 LP.
+    Special Summon 1 Psychic Type monster from your hand face-up to your field. Then, if you sent a Level 2 or lower monster to meet the requirement, gain 1000 LP.
   de:
   es:
   fr:
@@ -67,7 +67,4 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716847
