--- a/data/rush/16290.yaml
+++ b/data/rush/16290.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A dinosaur that lives in a herd. It looks tough, but it's not really that strong.
+    A dinosaur living peacefully in a herd. Although its form is intimidating, it's not really that strong.
   de:
   es:
   fr:
@@ -46,7 +46,4 @@ sets:
     set_name: Event Pack 2022 Vol.1
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717257
