--- a/data/rush/16303.yaml
+++ b/data/rush/16303.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher DARK Attribute Spellcaster Type monster from your Graveyard to your hand. Then, if you added "Sevens Road Magician" to your hand by this effect, you can add 1 Level 6 or higher Spellcaster Type monster from your Graveyard to your hand.
+    Add 1 Level 7 or higher DARK Attribute Spellcaster Type monster from your Graveyard to your hand. If you added "Sevens Road Magician" to your hand by this effect, you can add 1 Level 6 or higher Spellcaster Type monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -82,7 +82,4 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716648
