--- a/data/rush/16374.yaml
+++ b/data/rush/16374.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. Then, if the monster changed to face-up Attack Position by this effect was EARTH Attribute, you can draw 1 card.
+    Change 1 Defense Position monster on your opponent's field to face-up Attack Position. If the monster changed to face-up Attack Position by this effect was EARTH Attribute, you can draw 1 card.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715460
