--- a/data/rush/16596.yaml
+++ b/data/rush/16596.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change up to 2 monsters on your field to face-up Defense Position. This turn, if you have a Defense Position monster on your field, your opponent's monsters can only attack Defense Position monsters.
+    Change up to 2 monsters on your field to face-up Defense Position. This turn, if you have a Defense Position monster, your opponent's monsters can only attack Defense Position monsters.
   de:
   es:
   fr:
@@ -58,7 +58,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715468
