--- a/data/rush/16671.yaml
+++ b/data/rush/16671.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the original ATK of 1 face-up Level 8 or lower monster on your opponent's field with the same ATK as this card to 0 until the end of this turn. Then, if you have "Sevens Road Magician" in your Graveyard, you can draw 1 card.
+    Change the original ATK of 1 face-up Level 8 or lower monster on your opponent's field with the same ATK with this card to 0 until the end of this turn. Then, if you have "Sevens Road Magician" in your Graveyard, you can draw 1 card.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: 'Deck Mod Pack: Fierce Thunder Storm!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716649
