--- a/data/rush/16112.yaml
+++ b/data/rush/16112.yaml
@@ -15,6 +15,8 @@ name:
 text:
   en: |-
     A jet-powered hawk that travels at the speed of sound.
+
+    (This card is not treated as a "Cyber" card.)
   de:
   es:
   fr:
