--- a/data/rush/16288.yaml
+++ b/data/rush/16288.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Warrior Type monster is destroyed by an opponent's attack.
+    When a Warrior Type monster on your field is destroyed in battle by an opponent's attack.
   de:
   es:
   fr:
@@ -65,7 +65,4 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 717260
