--- a/data/rush/16368.yaml
+++ b/data/rush/16368.yaml
@@ -1,6 +1,6 @@
 konami_id: 16368
 name:
-  en: Laughing Grass
+  en: Cheering Grass
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Plant Type monster from your hand face-up to your field. Then, if you Special Summoned a Normal Monster by this effect, you can Special Summon up to 2 Level 1 Plant Type Normal Monsters from your Graveyard face-up to your field.
+    Special Summon 1 Plant Type monster from your hand face-up to your field. If you Special Summoned a Normal Monster by this effect, Special Summon up to 2 Level 1 Plant Type Normal Monsters from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: LaughingGrass-RDKP05-JP-C.png
+  image: CheeringGrass-RDKP05-JP-C.png
 sets:
   ja:
   - set_number: RD/KP05-JP064
@@ -56,9 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715577
