--- a/data/rush/16594.yaml
+++ b/data/rush/16594.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have no other monsters on your field, place 2 monsters with 0 ATK from your Graveyard on the bottom of the Deck in any order.
+    If you have no other monsters on your field, place 2 monsters with 0 ATK from your Graveyard on the bottom of your Deck in any order.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716592
