--- a/data/rush/16614.yaml
+++ b/data/rush/16614.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 500 damage to your opponent. Then, if you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand face-up to your field.
+    Inflict 500 damage to your opponent. If you have a face-up Fairy Type monster on your field, you can Special Summon 1 Fairy Type monster from your hand to your field face-up.
   de:
   es:
   fr:
@@ -56,9 +56,4 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716504
