--- a/data/rush/16774.yaml
+++ b/data/rush/16774.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 2000 ATK until the end of this turn. If your opponent has 8 or more monsters in their Graveyard, this card cannot be destroyed by your opponent's Trap Card effects this turn.
+    This card gains 2000 ATK until the end of this turn. If your opponent has more than 8 monsters in their Graveyard, this card cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
@@ -62,7 +62,4 @@ sets:
     set_name: Strongest Battle Deck Luke - Dragon's Dragons
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716802
