--- a/data/rush/17555.yaml
+++ b/data/rush/17555.yaml
@@ -1,6 +1,6 @@
 konami_id: 17555
 name:
-  en: Fantasy Ladybug Pastel
+  en: Fancy Ladybug Pastel
   de:
   es:
   fr:
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A kindhearted ladybug whose trademark is the heart on its back. It is said that if you touch it, your love will come true.
+    The heart on its back is the trademark for this tender ladybug. It is said that love will come true with a touch.
   de:
   es:
   fr:
@@ -33,14 +33,11 @@ atk: 700
 def: 100
 images:
 - index: 1
-  image: FantasyLadybugPastel-RDB221-JP-C.png
+  image: FancyLadybugPastel-RDB221-JP-C.png
 sets:
   ja:
   - set_number: RD/B221-JP006
     set_name: Battle Pack 2022 Vol.1
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714920
