--- a/data/cards/96981563.yaml
+++ b/data/cards/96981563.yaml
@@ -8,7 +8,7 @@ name:
   it: Tartaruga Mangia-Fiamme
   pt: Tartaruga Gigante que se Alimenta de Chamas
   ja: <ruby>炎<rt>ほのお</rt></ruby>を<ruby>食<rt>く</rt></ruby>らう<ruby>大<rt>おお</rt></ruby><ruby>亀<rt>ガメ</rt></ruby>
-  ja_romaji: Honō wo Kurau Ōgame
+  ja_romaji: Honō o Kurau Ōgame
   ko: 화염을 삼키는 거대 거북
   ko_rr:
   zh-TW:
