--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -8,7 +8,7 @@ name:
   it: Re dei Servitori del Teschio
   pt: Rei dos Servos Caveira
   ja: ワイトキング
-  ja_romaji: Waito Kingu
+  ja_romaji: Waitokingu
   ko: 저주받은 하인 킹
   ko_rr:
   zh-TW:
