--- a/data/cards/25259669.yaml
+++ b/data/cards/25259669.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado por Invocação-Normal: você pode Invocar 1 monstro de Nível 4 ou menos por Invocação-Especial da sua mão e, além disso, depois, colocar este card em Posição de Defesa.
   ja: |-
-    ①：このカードが召喚に成功した時に発動できる。手札からレベル４以下のモンスター１体を特殊召喚する。この効果を発動した場合、このカードは守備表示になる。
+    ①：このカードが召喚した時に発動できる。手札からレベル４以下のモンスター１体を特殊召喚する。このカードが攻撃表示の場合、さらにこのカードは守備表示になる。
   ko: |-
     ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 패에서 레벨 4 이하의 몬스터 1장을 특수 소환한다. 이 효과를 발동했을 경우, 이 카드는 수비 표시가 된다.
   zh-TW: |-
