--- a/data/cards/95992081.yaml
+++ b/data/cards/95992081.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno: você pode desassociar 1 matéria deste card e, depois, escolher 1 monstro banido de Nível 4 ou menos; Invoque o alvo por Invocação-Especial no seu campo.
   ja: |-
     レベル３モンスター×２
-    ①：１ターンに１度、このカードのＸ素材を１つ取り除き、除外されている自分または相手のレベル４以下のモンスター１体を対象として発動できる。そのモンスターを自分フィールドに特殊召喚する。
+    ①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分か相手の除外状態のレベル４以下のモンスター１体を対象として発動できる。そのモンスターを自分フィールドに特殊召喚する。
   ko: |-
     레벨 3 몬스터 × 2
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 제외되어 있는 자신 또는 상대의 레벨 4 이하의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 자신 필드에 특수 소환한다.
