--- a/data/cards/03040496.yaml
+++ b/data/cards/03040496.yaml
@@ -142,6 +142,6 @@ sets:
     - Holographic Rare
 limit_regulation:
   tcg: Forbidden
-  ocg: Unlimited
+  ocg: Forbidden
 yugipedia_page_id: 714253
 master_duel_rarity: UR
