--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -27,7 +27,8 @@ text:
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com "Benção dos Duendes". Quando seu oponente ativar um card ou efeito que escolha como alvo um monstro que você controla (Efeito Rápido): você pode descartar este card; negue a ativação. Quando seu oponente Invocaria um ou mais monstros por Invocação-Especial (Efeito Rápido): você pode devolver este card para a mão; negue a Invocação-Especial e, se isso acontecer, bana esse(s) monstro(s).
   ja: |-
-    「精霊の祝福」により降臨。①：自分フィールドのモンスターを対象とする魔法・罠・モンスターの効果を相手が発動した時、このカードを手札から捨てて発動できる。その発動を無効にする。②：相手がモンスターを特殊召喚する際に、フィールドのこのカードを持ち主の手札に戻して発動できる。その特殊召喚を無効にし、そのモンスターを除外する。
+    「精霊の祝福」により降臨
+    ①：自分フィールドのモンスターを対象とする魔法・罠・モンスターの効果を相手が発動した時、このカードを手札から捨てて発動できる。その発動を無効にする。②：相手がモンスターを特殊召喚する際に、フィールドのこのカードを手札に戻して発動できる。その特殊召喚を無効にし、そのモンスターを除外する。
   ko: |-
     "정령의 축복"에 의해 의식 소환. ①: 자신 필드의 몬스터를 대상으로 하는 마법 / 함정 / 몬스터의 효과를 상대가 발동했을 때, 이 카드를 패에서 버리고 발동할 수 있다. 그 발동을 무효로 한다. ②: 상대가 몬스터를 특수 소환하는 시기에, 필드의 이 카드를 주인의 패로 되돌리고 발동할 수 있다. 그 특수 소환을 무효로 하고, 그 몬스터를 제외한다.
   zh-TW:
