--- a/data/cards/05614808.yaml
+++ b/data/cards/05614808.yaml
@@ -34,7 +34,7 @@ text:
     Quando este card for Invocado por Invocação-Sincro: você pode destruir todos os monstros em Posição de Ataque do seu oponente. Este card pode realizar até 2 ataques contra monstros durante cada Fase de Batalha. Se este card atacar um monstro em Posição de Defesa, cause dano de batalha perfurante. Se este card que você controla for destruído por um card do oponente (em batalha ou por um efeito de card) e enviado para o seu Cemitério: você pode banir 1 outro monstro de ÁGUA no seu Cemitério; Invoque este card por Invocação-Especial e, se isso acontecer, ele é considerado como um Regulador.
   ja: |-
     水属性チューナー＋チューナー以外の水属性モンスター１体以上
-    ①：このカードがＳ召喚に成功した時に発動できる。相手フィールドの攻撃表示モンスターを全て破壊する。②：このカードは１度のバトルフェイズ中に２回までモンスターに攻撃できる。③：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える。④：このカードが相手によって破壊され墓地へ送られた場合、このカード以外の自分の墓地の水属性モンスター１体を除外して発動できる。このカードをチューナー扱いで特殊召喚する。
+    ①：このカードがＳ召喚した時に発動できる。相手フィールドの攻撃表示モンスターを全て破壊する。②：このカードは１度のバトルフェイズ中に２回までモンスターに攻撃できる。③：このカードが守備表示モンスターを攻撃した場合、その守備力を攻撃力が超えた分だけ相手に戦闘ダメージを与える。④：このカードが相手によって破壊され墓地へ送られた場合、自分の墓地から他の水属性モンスター１体を除外して発動できる。このカードをチューナー扱いで特殊召喚する。
   ko: |-
     물 속성 튜너 ＋ 튜너 이외의 물 속성 몬스터 1장 이상
     ①: 이 카드가 싱크로 소환에 성공했을 때에 발동할 수 있다. 상대 필드의 공격 표시 몬스터를 전부 파괴한다. ②: 이 카드는 1번의 배틀 페이즈 중에 2회까지 몬스터에 공격할 수 있다. ③: 이 카드가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다. ④: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우, 이 카드 이외의 자신 묘지의 물 속성 몬스터 1장을 제외하고 발동할 수 있다. 이 카드를 튜너로 취급하여 특수 소환한다.
