--- a/data/cards/06498706.yaml
+++ b/data/cards/06498706.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Revele 1 Monstro de Fusão no seu Deck Adicional e Invoque por Invocação-Especial, da sua mão ou do Deck, 1 das Matérias de Fusão cujo nome esteja especificamente listado nesse card e, além disso, você não pode Invocar monstros do Deck Adicional por Invocação-Especial, exceto Monstros de Fusão, no turno em que ativar este card. Você só pode ativar 1 "Implantar Fusão" por turno.
   ja: |-
-    このカード名のカードは１ターンに１枚しか発動できない。①：ＥＸデッキの融合モンスター１体を相手に見せ、そのモンスターにカード名が記されている融合素材モンスター１体を手札・デッキから特殊召喚する。このカードを発動するターン、自分は融合モンスターしかＥＸデッキから特殊召喚できない。
+    このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分は融合モンスターしかＥＸデッキから特殊召喚できない。①：ＥＸデッキの融合モンスター１体を相手に見せ、そのモンスターにカード名が記された融合素材モンスター１体を手札・デッキから特殊召喚する。
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 엑스트라 덱의 융합 몬스터 1장을 상대에게 보여주고, 그 몬스터에 카드명이 쓰여 있는 융합 소재 몬스터 1장을 패 / 덱에서 특수 소환한다. 이 카드를 발동하는 턴에, 자신은 융합 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
