--- a/data/cards/13035077.yaml
+++ b/data/cards/13035077.yaml
@@ -116,6 +116,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Limited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 405314
 master_duel_rarity: SR
