--- a/data/cards/21044178.yaml
+++ b/data/cards/21044178.yaml
@@ -34,7 +34,7 @@ text:
     Enquanto este card tiver uma matéria associada a ele que era originalmente de ÁGUA, todos os monstros de ÁGUA que você controla ganham 500 de ATK. Uma vez por turno (Efeito Rápido): você pode desassociar 1 matéria deste card; seu oponente não pode ativar nenhum efeito de card no Cemitério dele neste turno.
   ja: |-
     レベル４モンスター×２
-    ①：このカードが水属性モンスターをＸ素材としている場合、自分フィールドの水属性モンスターの攻撃力は５００アップする。②：１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。このターン、相手は墓地のカードの効果を発動できない。この効果は相手ターンでも発動できる。
+    ①：このカードが水属性モンスターをＸ素材としている場合、自分フィールドの水属性モンスターの攻撃力は５００アップする。②：自分・相手ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。このターン、相手は墓地のカードの効果を発動できない。
   ko: |-
     레벨 4 몬스터 × 2
     ①: 이 카드가 물 속성 몬스터를 엑시즈 소재로 하고 있을 경우, 자신 필드의 물 속성 몬스터의 공격력은 500 올린다. ②: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 턴에, 상대는 묘지의 카드의 효과를 발동할 수 없다. 이 효과는 상대 턴에도 발동할 수 있다.
@@ -43,7 +43,7 @@ text:
     此卡持有將水屬性怪獸作為超量素材的場合，我方場上的水屬性怪獸攻擊力上升500點。此外，1回合1次，可移除此卡的1個超量素材並發動。此回合，於對手墓地發動的魔法、陷阱、效果怪獸的效果不可發動。此效果也可於對手回合發動。
   zh-CN: |-
     等级4怪兽×2
-    ①：此卡以水属性怪兽作为超量素材的情况下，自己场上的水属性怪兽的攻击力上升500。②：1回合1次，去除此卡的1个超量素材可以发动。此回合中，对手不可发动墓地的卡的效果。此效果在对手回合中也可以发动。
+    ①：此卡以水属性怪兽作为超量素材的情况下。自己场上的水属性怪兽的攻击力上升500。②：1回合1次，去除此卡的1个超量素材可以发动。此回合中，对手不可发动墓地的卡的效果。此效果在对手回合中也可以发动。
 card_type: Monster
 monster_type_line: Sea Serpent / Xyz / Effect
 attribute: WATER
