--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -107,6 +107,6 @@ sets:
     - Normal Parallel Rare
 limit_regulation:
   tcg: Limited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 716332
 master_duel_rarity: R
