--- a/data/cards/62320425.yaml
+++ b/data/cards/62320425.yaml
@@ -84,6 +84,6 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Limited
-  ocg: Limited
+  ocg: Forbidden
 yugipedia_page_id: 712541
 master_duel_rarity: SR
