--- a/data/cards/63504681.yaml
+++ b/data/cards/63504681.yaml
@@ -132,6 +132,6 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Forbidden
-  ocg: Unlimited
+  ocg: Forbidden
 yugipedia_page_id: 421061
 master_duel_rarity: UR
