--- a/data/cards/65734501.yaml
+++ b/data/cards/65734501.yaml
@@ -90,5 +90,5 @@ sets:
     - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 716431
