--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -153,6 +153,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 427895
 master_duel_rarity: R
