--- a/data/cards/69811710.yaml
+++ b/data/cards/69811710.yaml
@@ -108,6 +108,6 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Limited
+  ocg: Semi-Limited
 yugipedia_page_id: 707554
 master_duel_rarity: UR
