--- a/data/cards/73082255.yaml
+++ b/data/cards/73082255.yaml
@@ -34,7 +34,7 @@ text:
     Se você usar um ou mais monstros com um Nível dos quais seu oponente seja dono, para a Invocação-Xyz deste card, considere-o(s) como de Nível 8. Nenhum duelista pode escolher este card como alvo de efeitos de monstros Invocados por Invocação-Especial, exceto aqueles Invocados por Invocação-Especial do Cemitério. Você pode desassociar 1 matéria deste card; cada duelista envia os 4 cards do topo do Deck dele para o Cemitério e, depois, se qualquer monstro foi enviado para qualquer Cemitério por este efeito, você pode Invocar por Invocação-Especial 1 desses monstros no seu campo. Você só pode usar este efeito de "O Vampiro Zumbi" uma vez por turno.
   ja: |-
     レベル８モンスター×２体以上
-    元々の持ち主が相手となるモンスターをこのカードのＸ召喚の素材とする場合、そのレベルを８として扱う。このカード名の②の効果は１ターンに１度しか使用できない。①：このカードは墓地以外から特殊召喚されたモンスターの効果の対象にならない。②：このカードのＸ素材を１つ取り除いて発動できる。お互いのデッキの上からカードを４枚墓地へ送る。この効果でモンスターが自分・相手の墓地へ送られた場合、さらに自分は墓地へ送られたそのモンスター１体を選んで自分フィールドに特殊召喚できる。
+    元々の持ち主が相手となるモンスターをこのカードのＸ召喚の素材とする場合、そのレベルを８として扱う。このカード名の②の効果は１ターンに１度しか使用できない。①：お互いはこのカードを、墓地以外から特殊召喚されたモンスターの効果の対象にできない。②：このカードのＸ素材を１つ取り除いて発動できる。お互いのデッキの上からカードを４枚墓地へ送る。この効果でモンスターが墓地へ送られた場合、さらに自分はその内の１体を自分フィールドに特殊召喚できる。
   ko: |-
     레벨 8 몬스터 × 2장 이상
     원래의 주인이 상대가 되는 몬스터를 이 카드의 엑시즈 소환의 소재로 할 경우, 그 레벨을 8 로 취급한다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 묘지 이외에서 특수 소환된 몬스터 효과의 대상이 되지 않는다. ②: 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 서로의 덱 위에서 카드를 4장 묘지로 보낸다. 이 효과로 몬스터가 자신 / 상대의 묘지로 보내졌을 경우, 추가로 자신은 묘지로 보내진 그 몬스터 1장을 고르고 자신 필드에 특수 소환할 수 있다.
