--- a/data/cards/74402414.yaml
+++ b/data/cards/74402414.yaml
@@ -27,12 +27,12 @@ text:
   pt: |-
     Ative este card ao enviar toda a sua mão para o Cemitério; bana 5 Magias/Armadilhas do seu Deck. Sempre que seu oponente ativar um Card de Magia, coloque 1 Marcador de Crônica neste card quando esse Card de Magia resolver. Você pode remover 2 Marcadores de Crônica deste card; seu oponente seleciona 1 card banido pelo efeito deste card para que você adicione à sua mão. Se este card com a face para cima na Zona de Magias & Armadilhas deixar o campo: você sofre 500 de dano para cada card atualmente banido pelo efeito deste card.
   ja: |-
-    ①：手札を全て墓地へ送ってこのカードを発動できる。デッキから魔法・罠カード５枚を除外する。②：相手が魔法カードを発動する度に、このカードにクロニクルカウンターを１つ置く。③：このカードのクロニクルカウンターを２つ取り除いて発動できる。相手はこのカードの効果で除外したカードの中から１枚を選ぶ。自分は相手が選んだカードを手札に加える。④：魔法＆罠ゾーンの表側表示のこのカードがフィールドから離れた時、自分はこのカードの効果で除外されているカードの数×５００ダメージを受ける。
+    ①：手札を全て墓地へ送ってこのカードを発動できる。デッキから魔法・罠カード５枚を除外する。②：相手が魔法カードを発動する度に、このカードにクロニクルカウンターを１つ置く。③：このカードのクロニクルカウンターを２つ取り除いて発動できる。相手はこのカードの効果で除外されているカードの中から１枚を選ぶ。自分はそのカードを手札に加える。④：魔法＆罠ゾーンの表側表示のこのカードがフィールドから離れた時、自分はこのカードの効果で除外されているカードの数×５００ダメージを受ける。
   ko: |-
     ①: 패를 전부 묘지로 보내고 이 카드를 발동할 수 있다. 덱에서 마법 / 함정 카드 5장을 제외한다. ②: 상대가 마법 카드를 발동할 때마다, 이 카드에 크로니클 카운터를 1개 놓는다. ③: 이 카드의 크로니클 카운터를 2개 제거하고 발동할 수 있다. 상대는 이 카드 효과로 제외한 카드 중에서 1장을 고른다. 자신은 상대가 고른 카드를 패에 넣는다. ④: 마법 & 함정 존의 앞면 표시의 이 카드가 필드에서 벗어났을 때, 자신은 이 카드 효과로 제외되어 있는 카드의 수 × 500 데미지를 받는다.
   zh-TW:
   zh-CN: |-
-    ①：将手牌全部送至墓地可以发动此卡。从牌组将5张魔法・陷阱卡除外。②：每次对手发动魔法卡，就在此卡上放1个编年史计数物。③：去除此卡的2个编年史计数物可以发动。对手从因此卡的效果被除外的卡中挑选1张。自己将对手挑选的卡加入手牌。④：魔法与陷阱区域的表侧表示的此卡从场上离开时，自己受到因此卡的效果被除外的卡数量×500的伤害。
+    ①：将手牌全部送至墓地可以发动此卡。从牌组将5张魔法・陷阱卡除外。②：每次对手发动魔法卡，就在此卡上放1个编年史计数物。③：去除此卡的2个编年史计数物可以发动。对手从因此卡的效果除外的卡中挑选1张。自己将对手挑选的卡加入手牌。④：魔法与陷阱区域的表侧表示的此卡从场上离开时，自己受到因此卡的效果被除外的卡数量×500的伤害。
 card_type: Spell
 property: Continuous
 images:
