--- a/data/cards/89617515.yaml
+++ b/data/cards/89617515.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Quando este card for Invocado: você pode enviar 1 monstro Peixe do seu Deck para o Cemitério, exceto "Peixe Folha Sem Vida". Você pode banir este card do seu Cemitério e, depois, escolha 3 monstros Peixe no seu Cemitério; embaralhe esses monstros no seu Deck e, depois, compre 1 card. Você só pode usar cada efeito de "Peixe Folha Sem Vida" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・反転召喚・特殊召喚に成功した時に発動できる。デッキから「揺海魚デッドリーフ」以外の魚族モンスター１体を墓地へ送る。②：墓地のこのカードを除外し、自分の墓地の魚族モンスター３体を対象として発動できる。そのモンスターをデッキに加えてシャッフルする。その後、自分はデッキから１枚ドローする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・反転召喚・特殊召喚した時に発動できる。デッキから「揺海魚デッドリーフ」以外の魚族モンスター１体を墓地へ送る。②：墓地のこのカードを除外し、自分の墓地の魚族モンスター３体を対象として発動できる。そのモンスターをデッキに戻す。その後、自分は１枚ドローする。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때에 발동할 수 있다. 덱에서 "요해어 데드리프" 이외의 어류족 몬스터 1장을 묘지로 보낸다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의 어류족 몬스터 3장을 대상으로 하여 발동할 수 있다. 그 몬스터를 덱에 넣고 셔플한다. 그 후, 자신은 덱에서 1장 드로우한다.
   zh-TW:
