--- a/data/cards/90846359.yaml
+++ b/data/cards/90846359.yaml
@@ -188,6 +188,6 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Unlimited
+  ocg: Semi-Limited
 yugipedia_page_id: 12523
 master_duel_rarity: SR
