--- a/data/cards/98898173.yaml
+++ b/data/cards/98898173.yaml
@@ -34,7 +34,7 @@ text:
   zh-CN: |-
     融化身体藏在脚下的影子里，从敌人的正下方发动攻击。
 card_type: Monster
-monster_type_line: Aqua / Mprr,a;
+monster_type_line: Aqua / Normal
 attribute: WATER
 level: 2
 atk: 500
