--- a/rush.yaml
+++ b/rush.yaml
@@ -50278,8 +50278,6 @@ materials:
     "마장 야메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
-series:
-- Three Rulers
 images:
 - index: 1
   image: YamiterasutheDivineRuler-RDS224-JP-ScR.png
@@ -52790,8 +52788,6 @@ materials:
     "월마장 키메루나" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
-series:
-- Three Rulers
 images:
 - index: 1
   image: KimeterasutheRisingLuna-RDGRP1-JP-UR.png
@@ -57618,8 +57614,6 @@ materials:
     "마장 세메룰러" ＋ "전천녀 하리키리"
   zh-TW:
   zh-CN:
-series:
-- Three Rulers
 images:
 - index: 1
   image: SemeterasutheDivineRuler-RDKP08-JP-UR.png
@@ -94919,8 +94913,6 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
-series:
-- Three Rulers
 images:
 - index: 1
   image: RisingLunaRadiantLuster-RDKP12-JP-R.png
@@ -117123,8 +117115,6 @@ materials:
   ko:
   zh-TW:
   zh-CN:
-series:
-- Three Rulers
 images:
 - index: 1
   image: KimeterasutheDivineRuler-RDMRP2-JP-OP.png
@@ -119644,6 +119634,64 @@ sets:
     - Super Rare
     - Secret Rare
 yugipedia_page_id: 1018842
+---
+konami_id:
+name:
+  en: Dream Ticket
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ドリームチケット
+  ja_romaji: Dorīmu Chiketto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have "Prima Guitarna the Shining Superstar" or "Esperade the Smashing Superstar" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, you can destroy 1 card on your opponent's field. This turn, you can only attack with Omega Psychic or Psychic Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Psychic Musician
+images:
+- index: 1
+  image: DreamTicket-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP070
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1018891
 ---
 konami_id:
 name:
