--- a/rush.yaml
+++ b/rush.yaml
@@ -119657,7 +119657,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の「彩光のプリマギターナ」または「砕光のエスパレイド」がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119669,7 +119670,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分は１枚ドローする。その後、相手フィールドのカード１枚を選んで破壊できる。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
