--- a/data/rush/18240.yaml
+++ b/data/rush/18240.yaml
@@ -14,14 +14,13 @@ name:
   zh-CN:
 text:
   en: |-
-    A curious apprentice adventurer. She often works with Prophecy Phrase's gang in search of the treasures of their ancestors.
+    A curious explorer and an apprentice adventurer. She is often found hanging about the Prophecy Phrase who are searching for their ancestral treasures.
   de:
   es:
   fr:
   it:
   pt:
-  ja: |-
-    好奇心旺盛な見習い冒険家。先祖の宝を探し求めるプロフェシーフレーズ達としばしば行動を共にすることも。
+  ja:
   ko: |-
     호기심 왕성한 견습 모험가. 선조의 보물을 찾아다니는 프로퍼시프레이즈 일행과 종종 함께 행동하기도 한다.
   zh-TW:
@@ -48,9 +47,4 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716495
