--- a/rush.yaml
+++ b/rush.yaml
@@ -81004,14 +81004,13 @@ name:
   zh-CN:
 text:
   en: |-
-    A curious apprentice adventurer. She often works with Prophecy Phrase's gang in search of the treasures of their ancestors.
+    A curious explorer and an apprentice adventurer. She is often found hanging about the Prophecy Phrase who are searching for their ancestral treasures.
   de:
   es:
   fr:
   it:
   pt:
-  ja: |-
-    好奇心旺盛な見習い冒険家。先祖の宝を探し求めるプロフェシーフレーズ達としばしば行動を共にすることも。
+  ja:
   ko: |-
     호기심 왕성한 견습 모험가. 선조의 보물을 찾아다니는 프로퍼시프레이즈 일행과 종종 함께 행동하기도 한다.
   zh-TW:
@@ -81038,11 +81037,6 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716495
 ---
 konami_id: 18241
@@ -119694,6 +119688,62 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1018891
+---
+konami_id:
+name:
+  en: Raging Rock
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>怒<rt>おこ</rt></ruby>ロック
+  ja_romaji: Oko Rokku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster while you have 3 face-up Omega Psychic and/or Psychic Type monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    All face-up monsters on your field gain 200 ATK until the end of this turn. Then, you can choose 1 face-up Effect Monster on your opponent's field. If you do, your opponent cannot activate the chosen monster's effects this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Band Group
+images:
+- index: 1
+  image: RagingRock-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP072
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1018931
 ---
 konami_id:
 name:
