--- a/data/cards/03283679.yaml
+++ b/data/cards/03283679.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: Galactic Overlord
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC315
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
