--- a/data/cards/36484016.yaml
+++ b/data/cards/36484016.yaml
@@ -109,6 +109,11 @@ sets:
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC321
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
