--- a/data/cards/46772449.yaml
+++ b/data/cards/46772449.yaml
@@ -144,6 +144,10 @@ sets:
     set_name: 'Structure Deck: Blitzkrieg of the Mechlight Dragons Deck Enhancement Pack'
     rarities:
     - Super Rare
+  - set_number: 23SP-SC319
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
