--- a/data/rush/19538.yaml
+++ b/data/rush/19538.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19538
 name:
   en: Royal Rebel's Beginitar
   de:
@@ -21,7 +21,7 @@ text:
   it:
   pt:
   ja: |-
-    自分たちの曲を皆に聴いてもらおうと日々努力している、ギターの悪魔。
+    自分たちの曲を皆に聴いてもらおうと日々努力しているギターの悪魔。
   ko:
   zh-TW:
   zh-CN:
