--- a/data/rush/19539.yaml
+++ b/data/rush/19539.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19539
 name:
   en: Royal Rebel's Babybass
   de:
@@ -21,7 +21,7 @@ text:
   it:
   pt:
   ja: |-
-    ビギターやキッドラムをクールに支えている、ベースの悪魔。
+    ビギターやキッドラムをクールに支えているベースの悪魔。
   ko:
   zh-TW:
   zh-CN:
