--- a/data/rush/19540.yaml
+++ b/data/rush/19540.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19540
 name:
   en: Royal Rebel's Kidrum
   de:
@@ -21,7 +21,7 @@ text:
   it:
   pt:
   ja: |-
-    上級ロイヤルデモンズに憧れてバンドを始めた、ドラムの悪魔。
+    上級ロイヤルデモンズに憧れてバンドを始めたドラムの悪魔。
   ko:
   zh-TW:
   zh-CN:
