--- a/data/cards/01315120.yaml
+++ b/data/cards/01315120.yaml
@@ -130,6 +130,10 @@ sets:
     set_name: "Structure Deck: The Blue-Eyed Dragon's Thundering Descent Deck Enhancement Pack"
     rarities:
     - Super Rare
+  - set_number: 23SP-SC313
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
