--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -158,6 +158,11 @@ sets:
     set_name: Beginner's Edition 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC302
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
