--- a/data/cards/04538826.yaml
+++ b/data/cards/04538826.yaml
@@ -137,6 +137,11 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC301
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
