--- a/data/cards/15693423.yaml
+++ b/data/cards/15693423.yaml
@@ -272,6 +272,10 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts'
     rarities:
     - Common
+  - set_number: 23SP-SC300
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
