--- a/data/cards/18634367.yaml
+++ b/data/cards/18634367.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC323
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
