--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -146,6 +146,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 23SP-SC316
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
