--- a/data/cards/30451366.yaml
+++ b/data/cards/30451366.yaml
@@ -101,6 +101,11 @@ sets:
     set_name: Tournament Pack 2011 Vol.8
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC307
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
