--- a/data/cards/46457856.yaml
+++ b/data/cards/46457856.yaml
@@ -97,6 +97,11 @@ sets:
     set_name: Vol.1
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC305
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
