--- a/data/cards/46897277.yaml
+++ b/data/cards/46897277.yaml
@@ -75,6 +75,11 @@ sets:
     set_name: The Shining Darkness
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC311
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
