--- a/data/cards/50259460.yaml
+++ b/data/cards/50259460.yaml
@@ -150,6 +150,11 @@ sets:
     set_name: Tournament Pack 5
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC306
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
