--- a/data/cards/51412776.yaml
+++ b/data/cards/51412776.yaml
@@ -94,6 +94,11 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC322
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
