--- a/data/cards/53936268.yaml
+++ b/data/cards/53936268.yaml
@@ -144,6 +144,10 @@ sets:
     set_name: Mega Pack 01
     rarities:
     - Common
+  - set_number: 23SP-SC303
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
