--- a/data/cards/73134081.yaml
+++ b/data/cards/73134081.yaml
@@ -39,7 +39,7 @@ images:
 - index: 1
   image: FinalFlame-DL2-JP-C.jpg
   illustration: FinalFlame-TF05-JP-VG-artwork.png
-- index: 2
+- index: '1.1'
   image: FinalFlame-LOB-EN-R-UE-25thAnniversaryEdition.png
   illustration: FinalFlame-TF04-EN-VG-artwork.png
 sets:
