--- a/data/cards/76547525.yaml
+++ b/data/cards/76547525.yaml
@@ -112,6 +112,11 @@ sets:
     set_name: 'Booster SP: Highspeed Riders'
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: 23SP-SC317
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
