--- a/data/cards/79126789.yaml
+++ b/data/cards/79126789.yaml
@@ -171,6 +171,11 @@ sets:
     set_name: "Structure Deck: Devil's Gate"
     rarities:
     - Common
+  zh-CN:
+  - set_number: 23SP-SC309
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
