--- a/data/cards/80651316.yaml
+++ b/data/cards/80651316.yaml
@@ -80,6 +80,11 @@ sets:
     set_name: Photon Shockwave
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: 23SP-SC314
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
