--- a/data/cards/80811661.yaml
+++ b/data/cards/80811661.yaml
@@ -138,6 +138,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: 23SP-SC320
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
