--- a/data/cards/83986578.yaml
+++ b/data/cards/83986578.yaml
@@ -137,6 +137,11 @@ sets:
     set_name: Expansion Pack Vol.2
     rarities:
     - Rare
+  zh-CN:
+  - set_number: 23SP-SC308
+    set_name: Entry Pack 2023 Vol.3
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
