--- a/data/rush/yugipedia1018931.yaml
+++ b/data/rush/yugipedia1018931.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（オメガサイキック族・サイキック族）が３体の場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで２００アップする。その後、相手フィールドの表側表示の効果モンスター１体を選ぶ事ができる。選んだ場合、このターン、相手は選んだモンスターの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
