--- a/rush.yaml
+++ b/rush.yaml
@@ -115504,6 +115504,153 @@ sets:
     - Over Rush Rare
 yugipedia_page_id: 1004305
 ---
+konami_id: 19538
+name:
+  en: Royal Rebel's Beginitar
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・ビギター
+  ja_romaji: Roiyaru Demonzu Bigitā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A guitar fiend that works hard every day to get everyone to hear its songs.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分たちの曲を皆に聴いてもらおうと日々努力しているギターの悪魔。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 100
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsBeginitar-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP006
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017931
+---
+konami_id: 19539
+name:
+  en: Royal Rebel's Babybass
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・ベビース
+  ja_romaji: Roiyaru Demonzu Bebīsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A bass fiend that coolly supports Beginitar and Kidrum.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    ビギターやキッドラムをクールに支えているベースの悪魔。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 200
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsBabybass-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP007
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017932
+---
+konami_id: 19540
+name:
+  en: Royal Rebel's Kidrum
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・キッドラム
+  ja_romaji: Roiyaru Demonzu Kiddoramu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A drum fiend that started a band because it admired the greater Royal Rebels.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    上級ロイヤルデモンズに憧れてバンドを始めたドラムの悪魔。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Normal
+attribute: LIGHT
+level: 1
+atk: 300
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsKidrum-RDB233-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B233-JP008
+    set_name: Battle Pack 2023 Vol.3
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1017933
+---
 konami_id:
 name:
   en: Resolve
@@ -117887,153 +118034,6 @@ yugipedia_page_id: 1017132
 ---
 konami_id:
 name:
-  en: Royal Rebel's Beginitar
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ロイヤルデモンズ・ビギター
-  ja_romaji: Roiyaru Demonzu Bigitā
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A guitar fiend that works hard every day to get everyone to hear its songs.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分たちの曲を皆に聴いてもらおうと日々努力している、ギターの悪魔。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Fiend / Normal
-attribute: LIGHT
-level: 1
-atk: 100
-def: 0
-series:
-- Royal Rebel's
-images:
-- index: 1
-  image: RoyalRebelsBeginitar-RDB233-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B233-JP006
-    set_name: Battle Pack 2023 Vol.3
-    rarities:
-    - Common
-is_translation_unofficial:
-  text:
-    en: true
-yugipedia_page_id: 1017931
----
-konami_id:
-name:
-  en: Royal Rebel's Babybass
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ロイヤルデモンズ・ベビース
-  ja_romaji: Roiyaru Demonzu Bebīsu
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A bass fiend that coolly supports Beginitar and Kidrum.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    ビギターやキッドラムをクールに支えている、ベースの悪魔。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Fiend / Normal
-attribute: LIGHT
-level: 1
-atk: 200
-def: 0
-series:
-- Royal Rebel's
-images:
-- index: 1
-  image: RoyalRebelsBabybass-RDB233-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B233-JP007
-    set_name: Battle Pack 2023 Vol.3
-    rarities:
-    - Common
-is_translation_unofficial:
-  text:
-    en: true
-yugipedia_page_id: 1017932
----
-konami_id:
-name:
-  en: Royal Rebel's Kidrum
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ロイヤルデモンズ・キッドラム
-  ja_romaji: Roiyaru Demonzu Kiddoramu
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A drum fiend that started a band because it admired the greater Royal Rebels.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    上級ロイヤルデモンズに憧れてバンドを始めた、ドラムの悪魔。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Fiend / Normal
-attribute: LIGHT
-level: 1
-atk: 300
-def: 0
-series:
-- Royal Rebel's
-images:
-- index: 1
-  image: RoyalRebelsKidrum-RDB233-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B233-JP008
-    set_name: Battle Pack 2023 Vol.3
-    rarities:
-    - Common
-is_translation_unofficial:
-  text:
-    en: true
-yugipedia_page_id: 1017933
----
-konami_id:
-name:
   en: Striping Wyvern
   de:
   es:
@@ -119712,7 +119712,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（オメガサイキック族・サイキック族）が３体の場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -119724,7 +119725,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの全ての表側表示モンスターの攻撃力はターン終了時まで２００アップする。その後、相手フィールドの表側表示の効果モンスター１体を選ぶ事ができる。選んだ場合、このターン、相手は選んだモンスターの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
