--- a/data/rush/16986.yaml
+++ b/data/rush/16986.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Constructor Wyrm Buildragon" from your Graveyard face-up to your field. This turn, you can only attack with Wyrm Type monsters.
+    Special Summon 1 "Constructor Wyrm Buildragon" from your Graveyard face-up to your field. You can only attack with Wyrm Type monsters this turn.
   de:
   es:
   fr:
