--- a/data/rush/18718.yaml
+++ b/data/rush/18718.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all Attack Position Level 8 or lower monsters on your opponent's field. This turn, your Effect Monsters cannot attack.
+    Destroy all Attack Position Level 8 or lower monsters on your opponent's field. Your Effect Monsters cannot attack this turn.
   de:
   es:
   fr:
