--- a/data/rush/17500.yaml
+++ b/data/rush/17500.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Normal Monster from your Graveyard to your hand. This turn, your Level 8 or lower Effect Monsters cannot attack.
+    Add 1 Normal Monster from your Graveyard to your hand. Your Level 8 or lower Effect Monsters cannot attack this turn.
   de:
   es:
   fr:
