--- a/data/rush/18767.yaml
+++ b/data/rush/18767.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 2 Machine Type monsters from your Graveyard to your hand. For the rest of this turn, you cannot Normal Summon or Set monsters from the hand.
+    Add up to 2 Machine Type monsters from your Graveyard to your hand. If you do, you cannot Normal Summon/Set monsters from your hand until the end of this turn.
   de:
   es:
   fr:
