--- a/data/rush/18951.yaml
+++ b/data/rush/18951.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 4 or lower monster from your Graveyard to your field in face-down Defense Position. For the rest of this turn, you cannot Special Summon monsters from your hand or Graveyard.
+    Special Summon 1 Level 4 or lower monster from your Graveyard to your field in face-down Defense Position. If you do, you cannot Special Summon monsters from your hand or Graveyard until the end of this turn.
   de:
   es:
   fr:
