--- a/data/rush/19134.yaml
+++ b/data/rush/19134.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. This turn, your opponent's Level 7 or lower monsters cannot attack.
+    Negate the attack. Your opponent's Level 7 or lower monsters cannot attack this turn.
   de:
   es:
   fr:
