--- a/data/rush/yugipedia1013207.yaml
+++ b/data/rush/yugipedia1013207.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 8 FIRE or DARK Attribute Warrior Type monster from your Graveyard to your hand. This turn, your monsters with 1900 or less DEF cannot attack.
+    Add 1 Level 8 FIRE or DARK Attribute Warrior Type monster from your Graveyard to your hand. Your monsters with 1900 or less DEF cannot attack this turn.
   de:
   es:
   fr:
